--- a/3.0.0-beta.3/index.html
+++ b/3.0.0-beta.3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Teradata Covalent - Angular Material Design UI Platform</title>
-    <base href="covalent">    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <base href="/">    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
@@ -157,5 +157,5 @@
         <div class="loader">Loading...</div>
       </div>
     </docs-covalent>
-  <script src="runtime-es2015.210c63202221f4c6cca9.js" type="module"></script><script src="runtime-es5.210c63202221f4c6cca9.js" nomodule defer></script><script src="polyfills-es5.0d98b6ceaba081ff6eea.js" nomodule defer></script><script src="polyfills-es2015.add50732bdafc5c19ec9.js" type="module"></script><script src="scripts.03e042f1f102bf0e2ed8.js" defer></script><script src="main-es2015.acc2818c29b60e6357c7.js" type="module"></script><script src="main-es5.acc2818c29b60e6357c7.js" nomodule defer></script></body>
+  <script src="runtime-es2015.ee3c99ad38349378bf4b.js" type="module"></script><script src="runtime-es5.ee3c99ad38349378bf4b.js" nomodule defer></script><script src="polyfills-es5.0d98b6ceaba081ff6eea.js" nomodule defer></script><script src="polyfills-es2015.add50732bdafc5c19ec9.js" type="module"></script><script src="scripts.03e042f1f102bf0e2ed8.js" defer></script><script src="main-es2015.e7db4eb92a90da4796be.js" type="module"></script><script src="main-es5.e7db4eb92a90da4796be.js" nomodule defer></script></body>
 </html>
