--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@ h1 {
 li {
   list-style-type: none;
   text-align: center;
-}</style></head><body><h1>covalent</h1><ul><li><a href="./v1.0.x">v1.0.x</a></li><li><a href="./v2.1.1">v2.1.1</a></li></ul></body></html>
+}</style></head><body><h1>covalent</h1><ul><li><a href="./latest">latest</a></li><li><a href="./v1.0.x">v1.0.x</a></li><li><a href="./v2.1.1">v2.1.1</a></li></ul></body></html>
