--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
-<!DOCTYPE html><html lang="en"><head><title>covalent</title><link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"><style type="text/css">body {
-  font-family: 'Nunito', sans-serif;
-  color: rgba(0, 0, 0, 0.87);
-  background-color: #FAFAFA;
-}
-h1 {
-  font-size: 45px;
-  font-weight: 500;
-  text-align: center;
-}
-li {
-  list-style-type: none;
-  text-align: center;
-}</style>
-<meta http-equiv="Refresh" content="0; url=https://kriswinbush.github.io/covalent/latest" />
-</head><body><h1>covalent</h1><ul><li><a href="./latest">latest</a></li><li><a href="./v1.0.x">v1.0.x</a></li><li><a href="./v2.1.1">v2.1.1</a></li><li><a href="./v3.0.x">v3.0.x</a></li></ul></body></html>
+<!DOCTYPE html><html lang="en">
+  <head>
+    <meta http-equiv="Refresh" content="0; url=https://kriswinbush.github.io/covalent/latest" />
+    <title>covalent</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <style type="text/css">
+      body {
+        font-family: 'Nunito', sans-serif;
+        color: rgba(0, 0, 0, 0.87);
+        background-color: #FAFAFA;
+      }
+      h1 {
+        font-size: 45px;
+        font-weight: 500;
+        text-align: center;
+      }
+      li {
+        list-style-type: none;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>covalent</h1>
+    <ul>
+      <li>
+        <a href="./latest">latest</a>
+      </li>
+      <li>
+        <a href="./v1.0.x">v1.0.x</a>
+      </li>
+      <li>
+        <a href="./v2.1.1">v2.1.1</a>
+      </li>
+      <li>
+        <a href="./v3.0.x">v3.0.x</a>
+      </li>
+    </ul>
+  </body>
+</html>
